add to cart done

--- a/styles/product/cart.module.scss
+++ b/styles/product/cart.module.scss
@@ -1,154 +1,492 @@
-.containers{
-    padding-left: 40px;
-    padding-right: 40px;
-    max-width: 100%;
-    .container{
-        display: flex;
-        align-items: center;
-        gap: 40px;
-        
-        .itemdetails{
-            display: flex;
-           
-         
-     
-        }
-    }
-}
-.products{
+.containers {
+  padding-left: 40px;
+  padding-right: 40px;
+  max-width: 100%;
+
+  .container {
     display: flex;
     align-items: center;
-    gap: 10px;
-    .productdetails{
-        display: flex;
-        flex-direction: column;
-        padding: 10px;
-        .productname{
-            font-size:16px;
-            line-height: 1.4rem;
-            width: 300px;
-            text-align: left;
-            color: #0e3f70; 
-             
+    gap: 40px;
 
-
-        }
-        .productsize{
-            font-size:14px;
-            text-align: left;
-            
-            
-        }
-        
+    .itemdetails {
+      display: flex;
     }
+  }
 }
-.table1{
-    text-align: center;
-    .tbody1{
-        tr{
-            border-bottom: 1px solid grey;
-            padding-bottom: 10px;
-        }
 
+.products {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  .productsimage {
+    display: flex;
+    align-items: center;
+    img {
+      height: 100px;
+      min-width: 150px;
+      object-fit: cover;
+      border-radius: 4px;
     }
-   
-}
-.price{
+  }
+  .productdetails {
     display: flex;
     flex-direction: column;
+    padding: 10px;
+
+    .productname {
+      font-size: 16px;
+      line-height: 1.4rem;
+      width: 300px;
+      text-align: left;
+      color: #0e3f70;
+    }
+
+    .productsize {
+      font-size: 14px;
+      text-align: left;
+    }
+  }
+}
+
+.table1 {
+  text-align: center;
+  .tbody1 {
+    tr {
+      padding-bottom: 10px;
+      border: 1px solid grey;
+    }
+  }
+}
+
+.price {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  gap: 4px;
+
+  .price1 {
+    text-decoration: line-through;
+  }
+
+  .price2 {
+    background: #e5015b;
+  }
+}
+
+.quantityinput {
+  width: 70px;
+  border-radius: 6px;
+  border: 1px solid grey;
+}
+
+.total {
+  padding: 10px;
+  color: #008849;
+  font-weight: bolder;
+  font-size: 1rem;
+  line-height: 1.4rem;
+}
+
+.right {
+  border: 1px solid grey;
+
+  width: 400px;
+
+  .itemprice {
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid grey;
     padding: 10px;
-    gap:4px;
-    .price1{
-        text-decoration: line-through
-    }
-    .price2{
-        background: #e5015b;
-    }
-}
-.quantityinput{
-    width:70px;
-    border-radius: 6px;
-    border: 1px solid grey;
-    
-}
-.qty{
+  }
+
+  .totalprice {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 10px;
-}
-.total{
-    padding: 10px;
-    color: #008849;
-    font-weight: bolder;
-    font-size: 1rem;
+  }
+
+  .estimateddeliverytime {
+    border: dashed 1px #f4ab5d;
+    color: #f4ab5d;
+    padding: 5px;
     line-height: 1.4rem;
+    margin-bottom: 10px;
+    margin: 10px;
+  }
+
+  .promocodesection {
+    padding: 1rem;
+    background: rgba(204, 204, 204, 0.15);
+  }
+
+  .promocodesection1 {
+    display: flex;
+    gap: 10px;
+
+    .promocodesection2 {
+      .vouchertext {
+        height: 36px;
+
+        border: 1px solid grey;
+        border-right: 0px;
+      }
+
+      .addbotton {
+        background: #f4ab5d;
+        color: #fff;
+        border: none 1px #f0f0f0;
+        padding: 0.5rem 1.25rem;
+      }
+    }
+  }
+
+  .checkout {
+    margin: 10px;
+
+    .checkoutbtn {
+      border-radius: 0;
+      padding: 1rem 1.5rem;
+
+      background: #f4ab5d;
+      color: #fff;
+      border: none 1px;
+      width: 100%;
+    }
+  }
 }
 
-.right{
-    border: 1px solid grey;
-    
-    width:400px;
-    .itemprice{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        border-bottom: 1px solid grey;
-        padding: 10px;
-    }
-    .totalprice{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 10px;
+.sectioncart {
+  .cartheading {
+    color: #0e3f70;
+    font-size: 1.4666666667rem;
+    font-style: normal;
+    font-weight: 700;
+    text-transform: none;
+    border-bottom: solid 1px #e3e3e3;
+    padding-bottom: 0.5em;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
 
+  .productcarlist {
+    thead {
+      td {
+        padding: 1rem 0;
+        text-align: center;
+        border-bottom: 1px solid rgba(160, 160, 160, 0.25);
+        border-top: 1px solid rgba(160, 160, 160, 0.25);
+        color: #1f3447;
+        font-size: 1rem;
+        font-weight: 500;
+      }
     }
-    .estimateddeliverytime{
-       
+    tbody {
+      td {
+        padding: 1rem 1rem;
+        border-bottom: 1px solid rgba(160, 160, 160, 0.25);
+        .productdetails {
+          font-size: 1rem;
+          .productsize {
+            font-size: 0.8rem;
+            color: currentColor !important;
+            opacity: 0.8;
+          }
+          .productname {
+            font-size: 15px;
+            font-weight: 400;
+            color: #1f3447;
+          }
+          .deliverttime {
+            padding-top: 5px;
+            font-size: 12px;
+            font-weight: 100;
+          }
+        }
+
+        .price {
+          font-weight: 400;
+          font-size: 1rem;
+          font-family: "Circular-Loom";
+        }
+
+        .qty {
+          position: relative;
+          -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+          margin-bottom: 0;
+          border: none;
+          height: auto;
+          -webkit-appearance: none;
+          position: relative;
+          display: flex;
+          align-items: center;
+          background-color: #fff;
+          border: solid 1px #e3e3e3;
+          transition: all 0.2s cubic-bezier(0.7, 0, 0.3, 1);
+          input {
+            color: #777;
+            max-width: 50px;
+            padding: 0.5rem;
+            text-align: center;
+            -webkit-appearance: none;
+            position: relative;
+            outline: none;
+            border: none;
+            transition: all 0.2s cubic-bezier(0.7, 0, 0.3, 1);
+            &::-webkit-inner-spin-button {
+              appearance: none;
+            }
+            &::-webkit-outer-spin-button {
+              appearance: none;
+            }
+          }
+
+          .btn {
+            display: flex;
+            flex-direction: column;
+            padding: 0.4rem;
+            background: #000;
+            svg {
+              fill: #fff;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .continueshopping {
+    width: fit-content;
+    a {
+      background: #1f3447;
+      color: #fff !important;
+      border: none 1px #f0f0f0;
+      padding: 1rem 1.25rem;
+      width: 100%;
+      display: block;
+      text-align: center;
+      margin-top: 1rem;
+      border-radius: 4px;
+    }
+  }
+}
+
+// side bar section
+
+.cartsummary {
+  background: none;
+  border: 1px solid rgba(160, 160, 160, 0.25);
+  margin-bottom: 1rem;
+
+  ul {
+    li {
+      padding: 16px 16px;
+    }
+    .blockpromo {
+      padding: 1rem;
+      background: rgba(204, 204, 204, 0.15);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 16px;
+
+      .inputbox {
+        display: flex;
+        width: 100%;
+
+        input {
+          flex: 1;
+          background-color: #fff;
+          color: #777;
+          border: solid 1px #e3e3e3;
+          width: 100%;
+          padding: 0.6rem 1rem;
+          transition: all 0.2s cubic-bezier(0.7, 0, 0.3, 1);
+          -webkit-appearance: none;
+        }
+
+        button {
+          background: #1f3447;
+          color: #fff;
+          border: none 1px #f0f0f0;
+          padding: 0.5rem 1.25rem;
+        }
+      }
+    }
+
+    .cartdetailedactions {
+      a {
+        background: #1f3447;
+        color: #fff !important;
+        border: none 1px #f0f0f0;
+        padding: 1rem 1.25rem;
+        width: 100%;
+        display: block;
+        text-align: center;
+      }
+    }
+
+    .cartsummaryline {
+      border-bottom: 1px solid rgba(160, 160, 160, 0.25);
+      display: flex;
+      justify-content: space-between;
+
+      span {
+        color: #0e3f70;
+        font-size: 1.2rem;
+        font-weight: 400;
+      }
+    }
+
+    .cartsummarytotals {
+      .pritotal {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        span {
+          font-size: 2rem;
+          font-weight: 500;
+        }
+      }
+    }
+
+    .cartsummarytotals {
+      .alertexpecteddeliverydate {
+        margin-top: 10px;
         border: dashed 1px #f4ab5d;
         color: #f4ab5d;
         padding: 5px;
-        line-height: 1.4rem;
-       margin-bottom: 10px;
-       margin: 10px;
-        
-
-
+      }
     }
-    .promocodesection{
+  }
+}
+
+.sectioncartorder {
+  .cartheading {
+    color: #0e3f70;
+    font-size: 1.4666666667rem;
+    font-style: normal;
+    font-weight: 700;
+    text-transform: none;
+    border-bottom: solid 1px #e3e3e3;
+    padding-bottom: 0.5em;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .productorderlistboxouter {
+    display: flex;
+    flex-wrap: wrap;
+
+    .accordionitem {
+      width: 100%;
+      border: 1px rgba(160, 160, 160, 0.25) solid;
+      opacity: 0.5;
+      border-bottom: none !important;
+
+      .accordiontitle {
+        .title {
+          border-bottom: 1px solid rgba(160, 160, 160, 0.25);
+          padding: 1rem;
+          font-size: 1.125rem;
+          font-weight: 700;
+        }
+      }
+
+      .nav {
+        display: none;
+      }
+
+      .accordioncontent {
         padding: 1rem;
-    background: rgba(204,204,204,.15);
+      }
     }
-    .promocodesection1{
-        display:flex;
-        gap:10px;
-       
-        .promocodesection2{
-            .vouchertext{
-                height:36px;
-               
-                border: 1px solid grey;
-                border-right: 0px;
-            }
-            .addbotton{
-                background: #f4ab5d;
-    color: #fff;
-    border: none 1px #f0f0f0;
-    padding: 0.5rem 1.25rem;
-                
-            }
+    .active {
+      opacity: 1;
+      .title {
+        color: #1f3447 !important;
+        opacity: 1 !important;
+      }
+    }
+  }
+}
 
-        }
-        
-    }
-    .checkout{
-        margin: 10px;
-        .checkoutbtn{
-            border-radius: 0;
-            padding: 1rem 1.5rem;
-           
-            background: #f4ab5d;
-    color: #fff;
-    border: none 1px;
+/*form */
+ul.formdesign {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 500px;
+  gap: 16px;
+
+  li {
     width: 100%;
-        }
+    p {
+      font-size: 1rem;
+      color: #1f3447;
+      opacity: 0.5;
+      margin-bottom: 0px;
     }
+
+    label {
+      display: block;
+      padding-top: calc(0.375rem + 1px);
+      padding-bottom: calc(0.375rem + 1px);
+      margin-bottom: 0;
+      font-size: inherit;
+      line-height: 1.5;
+      font-family: sans-serif;
+      opacity: 0.5;
+    }
+
+    input {
+      width: 100%;
+      background-color: #fff;
+      color: #777;
+      border: solid 1px #e3e3e3;
+      padding: 10px;
+      height: auto;
+      padding: 0.6rem 1rem;
+      transition: all 0.2s cubic-bezier(0.7, 0, 0.3, 1);
+      -webkit-appearance: none;
+    }
+  }
+
+  .agree {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+
+    input {
+      width: 20px;
+      padding: 20px;
+      height: 20px;
+      -webkit-appearance: checkbox;
+    }
+  }
+  .button {
+    button {
+      background: #1f3447;
+      color: #fff !important;
+      border: none 1px #f0f0f0;
+      padding: 1rem 1.25rem;
+      width: 100%;
+      display: block;
+      text-align: center;
+    }
+  }
+}
+// FOR SVG ICON ONLY
+
+.svgicon {
+  display: grid;
+  place-content: center;
+
+  svg {
+    height: 20px;
+    width: 20px;
+  }
 }
