--- a/styles/NewProductPage.module.scss
+++ b/styles/NewProductPage.module.scss
@@ -316,3 +316,36 @@
   font-weight: 700;
   line-height: 1.4;
 }
+.tabss{
+ 
+  // margin: 0px;
+  // margin-top: 16px;
+  // margin-bottom: 16px;
+  display: flex;
+  gap: 50px;
+  font-weight: 700;
+  line-height: 36px;
+  // padding-bottom: 16px;
+  border-bottom: 1px solid  #eee;
+  li{
+    padding: 10px;
+    color: #000;
+    border-bottom: 2px solid transparent;
+    cursor: pointer;
+  }
+}
+.tabconatiner{
+  margin-bottom: 24px;
+  .heading{
+    font-weight: 700;
+    line-height: 18px;
+    margin: 0 0 8px;
+    font-size: 16px;
+    padding: 0px;
+  }
+  .tabcontent{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 21px;
+  }
+}
