--- a/styles/admin.module.scss
+++ b/styles/admin.module.scss
@@ -8,9 +8,9 @@
   textarea,
   select {
     flex: 1;
-    padding: 0.4rem;
+    padding: 0.6rem;
     outline: none;
-    border: 2px solid transparent;
+    border: 2pt solid transparent;
     transition: all 100ms ease;
     background: #f5f5f5;
     border-radius: 8px;
@@ -34,24 +34,29 @@
     align-items: center;
     justify-content: center;
   }
+  input[type="file"] {
+    font-size: 0.75rem;
+  }
 }
 // FOR ADMIN INPUTS
 
 .container {
   display: grid;
   height: 100vh;
-  grid-template-columns: 200px 1fr;
+  grid-template-columns: 300px 1fr;
 }
 
 .sidebar {
   background: #f1f1f1;
-  padding: 1rem;
 }
 
 .controls {
   gap: 0.4rem;
   display: flex;
   flex-direction: column;
+  padding: 1rem;
+  position: sticky;
+  top: 0;
   button {
     padding: 0.4rem;
     outline: none;
@@ -79,10 +84,10 @@
   grid-template-columns: 1fr 1fr;
   @include common-input();
 }
-.gridgrid3 {
+.grid3 {
   gap: 0.4rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   @include common-input();
 }
 
@@ -91,6 +96,21 @@
   display: flex;
   flex-direction: column;
   @include common-input();
+}
+
+.field {
+  display: flex;
+  // align-items: center;
+  gap: 0.4rem;
+  i {
+    min-width: 50px;
+    display: flex;
+    padding: 0.5rem;
+    align-items: center;
+    justify-content: center;
+    background: #ffcdd2;
+    border-radius: 4px;
+  }
 }
 
 .buttonBox {
@@ -102,4 +122,20 @@
   font-size: 0.8rem;
   padding: 0.2rem 0.5rem 0;
   font-weight: 500;
+}
+
+.heading {
+  padding: 0.5rem;
+  border-bottom: 1px solid #eee;
+  margin: 0.4rem 0;
+}
+
+.addMore {
+  display: flex;
+  align-items: center;
+  button {
+    font-size: 0.8rem;
+    background-color: #666;
+    border-radius: 6px;
+  }
 }
