--- a/styles/admin.module.scss
+++ b/styles/admin.module.scss
@@ -1,3 +1,48 @@
+// ALL PRODUCTS STYLE START
+
+.products {
+  display: grid;
+  gap: 1rem;
+  .item {
+    padding: 0.2rem;
+    border-radius: 10px;
+    border: 1px solid #cacaca;
+    display: grid;
+    gap: 0.5rem;
+    grid-template-columns: auto 1fr;
+  }
+  .image {
+    display: grid;
+    img {
+      height: 150px;
+    }
+  }
+  .text {
+    display: flex;
+    flex-direction: column;
+    h4 {
+      font-size: 1.5rem;
+    }
+    p {
+      color: #444;
+    }
+  }
+
+  .category {
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+    span {
+      padding: 0.2rem;
+      border: 1.2pt solid #d9d9d9;
+      border-radius: 6px;
+      color: #444;
+      font-size: 0.9rem;
+    }
+  }
+}
+// ALL PRODUCTS STYLE END
+
 @mixin common-input {
   label {
     font-size: 0.9rem;
@@ -134,6 +179,15 @@
   display: flex;
   align-items: center;
   button {
+    padding: 0.4rem;
+    outline: none;
+    border: none;
+
+    border-radius: 8px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 0.8rem;
     background-color: #666;
     border-radius: 6px;
