--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,13 +1,14 @@
 @import "./variable.scss";
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.3/css/all.min.css");
+// @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.3/css/all.min.css");
+
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-size: 100%;
-  // font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  //   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-family: "Poppins";
+  font-family: "Inter", sans-serif;
 }
 ul {
   list-style: none;
@@ -547,13 +548,3 @@ img.NewProductPage_bannerimage___OEjc {
   object-fit: cover;
   object-position: -63px;
 }
-
-
-
-
- 
-
-
- 
- 
- 
