--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -160,20 +160,19 @@ hr.banner_icons {
     font-size: 85px;
   }
 }
+
+// STYLE FOR IMAGE CONTAINER
 .imgcontainer {
   position: relative;
   padding-bottom: 24px;
   background-color: #f5f5f5;
-
   [class*="col"] {
     padding: 0px !important;
   }
-
   .bigbed1 {
     margin-top: 8px;
     margin-right: 10px;
   }
-
   .bigbed1 img {
     width: 100%;
     height: 565px;
@@ -209,6 +208,7 @@ hr.banner_icons {
   }
 }
 
+//
 .imgcontainer2 {
   position: relative;
   width: 100%;
@@ -308,14 +308,12 @@ hr.banner_icons {
     border-bottom-right-radius: 4px;
     img {
       width: 255px;
-  }
-  .trustpilot {
-    img {
-      
-    width: 175px;
-
     }
-  }
+    .trustpilot {
+      img {
+        width: 175px;
+      }
+    }
   }
   .productsimages {
     margin-top: 30px;
@@ -355,21 +353,21 @@ section.qualityproducts {
     padding-right: 9px;
     padding-bottom: 35px;
   }
-    button {
-      margin: 0 auto;
-      display: block;
-      border: none;
-      background-color: #000;
-      color: #fff;
-      /* padding: 5px 30px 5px; */
-      border-radius: 50px;
-      font-size: 22px;
-      position: absolute;
-      top: 420px;
-      height: 45px;
-      width: 130px;
-      left: 77px;
-    }
+  button {
+    margin: 0 auto;
+    display: block;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    /* padding: 5px 30px 5px; */
+    border-radius: 50px;
+    font-size: 22px;
+    position: absolute;
+    top: 420px;
+    height: 45px;
+    width: 130px;
+    left: 77px;
+  }
 }
 .qualityheading {
   text-align: center;
@@ -420,7 +418,6 @@ section.qualityproducts {
 }
 .productslider {
   background-color: whitesmoke;
-
 }
 .featuredslider {
   h2 {
@@ -442,7 +439,6 @@ section.qualityproducts {
     text-align: center;
     max-width: 302px;
     font-weight: 600;
-
   }
 }
 .guidestrip {
@@ -542,7 +538,6 @@ section.qualityproducts {
     margin-bottom: 0 !important;
   }
 }
-
 
 .productimage {
   position: relative;
