--- a/styles/admin.module.scss
+++ b/styles/admin.module.scss
@@ -102,7 +102,8 @@
   padding: 1rem;
   position: sticky;
   top: 0;
-  button {
+  button,
+  a {
     padding: 0.4rem;
     outline: none;
     border: none;
