--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,8 +5,8 @@
 
 html,
 body {
-  padding: 0;
   margin: 0;
+  padding: 0;
   font-size: 100%;
   font-family: "Inter", sans-serif;
 }
@@ -15,7 +15,7 @@ ul {
 }
 
 a {
-  color: inherit;
+  color: inherit !important;
   text-decoration: none !important;
 }
 
