--- a/styles/NewProductPage.module.scss
+++ b/styles/NewProductPage.module.scss
@@ -1,3 +1,4 @@
+$mobile: 576px;
 .imagestyle {
   width: 100%;
   object-fit: cover;
@@ -320,7 +321,7 @@
   // margin-top: 16px;
   // margin-bottom: 16px;
   display: flex;
-  gap: 50px;
+  gap: 10px;
   font-weight: 700;
   line-height: 36px;
   // padding-bottom: 16px;
@@ -441,5 +442,44 @@
   }
 }
 
+@media (max-width: $mobile) {
+  .tabss{
  
+   
+    gap: 15px;
+   
+    li{
+      padding: 0px !important;
+      font-size: 14px;
+     
+      cursor: pointer;
+      font-weight: 400;
+    }
+
+  }
+  .productcart {
+    flex-wrap: wrap;
+
+  }
+  .productsimages{
+    .box1{
+      padding-bottom: 16px;
+      width: 100%;
+      img {
+        width: 100%;
+      }
+
+    }
+    .price{
+      text-align: center;
+    }
+  }
+  .trustpilot{
+    text-align: center;
+}
+
+
+  
+  
+}
 
