--- a/styles/topheader.module.scss
+++ b/styles/topheader.module.scss
@@ -214,58 +214,64 @@ $mobile: 576px;
     }
 }
 
-.header2{
-  display: flex;
-  justify-content: space-between;
- padding: 20px 10px;
- align-items: center;
- background-color: #f2f2f2;
- .header1{
-  .headerimage{
-    max-width: 100px;
-    margin-left: 3px;
-  }
- }
-  .secondbox1{
-    display: flex;
-    gap: 10px;
-    font-size: 14px;
-    line-height: 29px;
-    font-weight: 600;
-  }
-}
-.ulstyle{
-  margin: 0px;
-}
-.iconstyle{
-  margin-top: 0px !important;
-}
-.cart3{
-  display: flex;
-align-items: center;
-justify-content: space-between;
-margin-right: 10px;
-padding-top: 10px;
-padding-bottom: 10px;
+// .header2{
+//   display: flex;
+//   justify-content: space-between;
+//  padding: 20px 10px;
+//  align-items: center;
+//  background-color: #f2f2f2;
+//  .header1{
+//   .headerimage{
+//     max-width: 100px;
+//     margin-left: 3px;
+//   }
+//  }
+//   .secondbox1{
+//     display: flex;
+//     gap: 10px;
+//     font-size: 14px;
+//     line-height: 29px;
+//     font-weight: 600;
+//   }
+// }
+// .ulstyle{
+//   margin: 0px;
+// }
+// .iconstyle{
+//   margin-top: 0px !important;
+// }
+// .cart3{
+//   display: flex;
+// align-items: center;
+// justify-content: space-between;
+// margin-right: 10px;
+// padding-top: 10px;
+// padding-bottom: 10px;
 
-}
-.pstyle{
-  margin-bottom: 0px !important;
-  white-space: nowrap;
-  font-size: 12px;
-}
-.carticon1{
-  display: flex;
-  gap: 15px;
-}
-.wishlist{
-  text-align: center;
+// }
+// .pstyle{
+//   margin-bottom: 0px !important;
+//   white-space: nowrap;
+//   font-size: 12px;
+// }
+// .carticon1{
+//   display: flex;
+//   gap: 15px;
+// }
+// .wishlist{
+//   text-align: center;
+// }
+.mobileheadert{
+  display: none;
 }
 
 
 
 
 @media (max-width: $mobile) {
+  .mobileheadert{
+    display: block;
+  }
   .mydiv {
    display: none;
   }
@@ -282,4 +288,54 @@ padding-bottom: 10px;
     display: none;
   }
 
+  .header2{
+    display: flex;
+    justify-content: space-between;
+   padding: 20px 10px;
+   align-items: center;
+   background-color: #f2f2f2;
+   .header1{
+    .headerimage{
+      max-width: 100px;
+      margin-left: 3px;
+    }
+   }
+    .secondbox1{
+      display: flex;
+      gap: 10px;
+      font-size: 14px;
+      line-height: 29px;
+      font-weight: 600;
+    }
+  }
+  .ulstyle{
+    margin: 0px;
+  }
+  .iconstyle{
+    margin-top: 0px !important;
+  }
+  .cart3{
+    display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  
+  }
+  .pstyle{
+    margin-bottom: 0px !important;
+    white-space: nowrap;
+    font-size: 12px;
+  }
+  .carticon1{
+    display: flex;
+    gap: 15px;
+  }
+  .wishlist{
+    text-align: center;
+  }
+  
+
 }
+
