--- a/styles/product/product.module.scss
+++ b/styles/product/product.module.scss
@@ -1,3 +1,4 @@
+$mobile: 576px;
 .imagestyle {
   width: 100%;
   object-fit: cover;
@@ -317,11 +318,39 @@
 }
 
 
-
-
-@media (max-width:500px) {
-  .container {
-    
+@media (max-width: $mobile) {
+  .img{
+    .image {
+    min-height: auto !important;
+           }
+      }
+      .container {
+        position: relative !important;
+        right: 0px;
+        top: 0px !important;
+        transform: translate(0px, 10px);
+    }
+    .item1 {
+      flex-wrap: wrap;
+      width: auto;
+      height: auto;
+      display: inline-block;
   }
- 
+  .left{
+    flex: 1;
+    width: 100%;
+    flex-direction: row;
+    display: flex;
+    overflow: overlay;
+    flex-wrap: nowrap;
 }
+.right {
+  width: 100%;
+}
+  
+
+}
+
+
+
+
