--- a/styles/NewProductPage.module.scss
+++ b/styles/NewProductPage.module.scss
@@ -477,7 +477,13 @@ $mobile: 576px;
   .trustpilot{
     text-align: center;
 }
+.imageicon {
+  padding: 10px 15px;
 
+  span {
+    font-size: small;
+  }
+}
 
   
   
