--- a/styles/ECommerce/order.module.scss
+++ b/styles/ECommerce/order.module.scss
@@ -250,3 +250,163 @@
     }
   }
 }
+
+.subsubsubactionbtnlist {
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  .actionbtnlist {
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0;
+      li {
+        position: relative;
+        font-size: 15px;
+        color: #2196f3;
+        &:after {
+          content: "|";
+          margin: 0 5px;
+          color: #9e9e9e;
+        }
+        &:last-child {
+          &:after {
+            display: none;
+          }
+        }
+        span {
+          color: #9e9e9e;
+        }
+      }
+    }
+  }
+  .searchlistproduct {
+    max-width: 300px;
+    .box {
+      max-width: 300px;
+      position: relative;
+      input {
+        max-width: 330px;
+        flex: 1;
+        height: 40px;
+        padding: 10px;
+        font-size: 15px;
+        border: 1px solid #c5c5c5;
+        width: 300px;
+      }
+      button {
+        position: absolute;
+        right: 0;
+        width: 24px;
+        height: 24px;
+        border: none;
+        padding: 0;
+        background: transparent;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+}
+
+// -----------------------------------------
+.singleorderpage {
+  background: #fff;
+  padding: 30px 30px;
+  box-shadow: 2px 2px 1px #f1f5f9;
+  border: 1px solid #e5e5e5;
+  margin-top: 15px;
+  .actionbtn {
+    ul {
+      li {
+        a {
+          background: #2196f3;
+          display: block;
+          width: fit-content;
+          padding: 10px 30px;
+          color: #fff !important;
+        }
+      }
+    }
+  }
+  .orderdetails {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .box {
+    .outerbox {
+      display: flex;
+    }
+  }
+}
+
+.orderdetails .col {
+  flex: 1 1;
+  width: fit-content !important;
+}
+
+.orderdetails {
+  .wdheading {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+    line-height: 1.8em;
+    color: #766f6f;
+  }
+  .swdheading {
+    font-size: 15px;
+    font-weight: 500;
+  }
+  .texttrp {
+    color: transparent;
+    opacity: 0;
+  }
+}
+
+// -------------------------------------------
+.productdetailslist {
+  border-top: 1px solid #e5e5e5;
+  margin-top: 30px;
+  padding-top: 30px;
+  margin-left: -30px;
+  margin-right: -30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  table {
+    width: 100%;
+    thead {
+      background: #1e293b;
+      color: #fff;
+      font-size: 20px;
+      th {
+        padding: 10px 15px;
+      }
+    }
+    .woocmproduct {
+      tr {
+        border-bottom: 1px solid #e5e5e5;
+        padding: 6px 0px;
+        td {
+          padding: 10px 15px;
+          font-size: 14px;
+          .productimage {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            .image {
+              width: 30px;
+              height: 30px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
