--- a/styles/NewProductPage.module.scss
+++ b/styles/NewProductPage.module.scss
@@ -114,6 +114,9 @@ $mobile: 576px;
   width: calc(100% / 3 - 10px);
   padding: 10px;
   border-width: 1px !important;
+  span {
+    display: block;
+  }
 }
 
 .imagestyle2 {
@@ -234,7 +237,7 @@ $mobile: 576px;
 }
 .containers {
   // max-width: 100%;
-  width: 100%; 
+  width: 100%;
 }
 .productsimages {
   background-color: #f5f5f5;
@@ -315,8 +318,7 @@ $mobile: 576px;
   font-weight: 700;
   line-height: 1.4;
 }
-.tabss{
- 
+.tabss {
   // margin: 0px;
   // margin-top: 16px;
   // margin-bottom: 16px;
@@ -325,8 +327,8 @@ $mobile: 576px;
   font-weight: 700;
   line-height: 36px;
   // padding-bottom: 16px;
-  border-bottom: 1px solid  #eee;
-  li{
+  border-bottom: 1px solid #eee;
+  li {
     padding: 10px;
     color: #000;
     border-bottom: 2px solid transparent;
@@ -334,24 +336,23 @@ $mobile: 576px;
     font-weight: 400;
   }
 }
-.tabconatiner{
+.tabconatiner {
   margin-bottom: 24px;
-  .heading{
+  .heading {
     font-weight: 700;
     line-height: 18px;
     margin: 0 0 8px;
     font-size: 16px;
     padding: 0px;
   }
-  .tabcontent{
+  .tabcontent {
     font-size: 16px;
     font-weight: 500;
     line-height: 21px;
   }
 }
 
-
-// dropdownload 
+// dropdownload
 
 // dropdown list
 .dropdownlist {
@@ -372,7 +373,7 @@ $mobile: 576px;
       height: 32px;
       width: 10px;
     }
-    
+
     &:after {
       content: "▲";
       top: 0;
@@ -407,85 +408,75 @@ $mobile: 576px;
     align-items: center;
     border-radius: 4px;
     border: 2px solid #d7d6db;
-    -webkit-transition: border-color .5s ease-in-out;
-    transition: border-color .5s ease-in-out;
+    -webkit-transition: border-color 0.5s ease-in-out;
+    transition: border-color 0.5s ease-in-out;
     cursor: pointer;
-    
+  }
+  ul {
+    /* margin: 0; */
+    position: absolute;
+    z-index: 999;
+    background: #fff;
+    width: 99%;
+    left: 2px;
+    padding: 20px;
+    padding-left: 20px !important;
+    box-shadow: 0px 7px 8px 2px #cfcccc;
+    border-radius: 0px 0px 10px 10px;
+    li {
+      border: 2px solid #d7d6db;
+      -webkit-transition: border-color 0.5s ease-in-out;
+      transition: border-color 0.5s ease-in-out;
+      width: 100%;
+      margin-top: 10px;
+      font-size: 15px;
+      line-height: 1em;
+      padding: 10px 10px;
+      border-radius: 4px;
+      background: #e7e7e7bd;
+      cursor: pointer;
     }
-    ul {
-      /* margin: 0; */
-      position: absolute;
-      z-index: 999;
-      background: #fff;
-      width: 99%;
-      left: 2px;
-      padding: 20px;
-      padding-left: 20px !important;
-      box-shadow: 0px 7px 8px 2px #cfcccc;
-      border-radius: 0px 0px 10px 10px;
-      li {
-        border: 2px solid #d7d6db;
-        -webkit-transition: border-color .5s ease-in-out;
-        transition: border-color .5s ease-in-out;
-        width: 100%;
-        margin-top: 10px;
-        font-size: 15px;
-        line-height: 1em;
-        padding: 10px 10px;
-        border-radius: 4px;
-        background: #e7e7e7bd;
-        cursor: pointer;
-      }
-      li:first-child {
-        margin-top: 0px;
-      }
+    li:first-child {
+      margin-top: 0px;
+    }
   }
 }
 
 @media (max-width: $mobile) {
-  .tabss{
- 
-   
+  .tabss {
     gap: 15px;
-   
-    li{
+
+    li {
       padding: 0px !important;
       font-size: 14px;
-     
+
       cursor: pointer;
       font-weight: 400;
     }
-
   }
   .productcart {
     flex-wrap: wrap;
-
   }
-  .productsimages{
-    .box1{
+  .productsimages {
+    .box1 {
       padding-bottom: 16px;
       width: 100%;
       img {
         width: 100%;
       }
-
     }
-    .price{
+    .price {
       text-align: center;
     }
   }
-  .trustpilot{
+  .trustpilot {
     text-align: center;
-}
-.imageicon {
-  padding: 10px 15px;
+  }
+  .imageicon {
+    padding: 10px 15px;
 
-  span {
-    font-size: small;
+    span {
+      font-size: small;
+    }
   }
 }
-
-  
-  
-}
-
