--- a/styles/ECommerce/order.module.scss
+++ b/styles/ECommerce/order.module.scss
@@ -223,7 +223,7 @@
             font-weight: 500;
           }
 
-          .ststus {
+          .status {
             padding-top: 0.125rem;
             padding-bottom: 0.125rem;
             padding-left: 0.625rem;
@@ -239,7 +239,6 @@
               background: #d1fae5;
               color: #339671;
             }
-
             &.pending {
               background: #f1f5f9;
               color: #64748b;
