--- a/styles/commerce/order.module.scss
+++ b/styles/commerce/order.module.scss
@@ -505,6 +505,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+    align-content: start;
     li {
       width: 100%;
       background-color: #f1f5f9;
@@ -521,5 +522,16 @@
   }
   .tabbox {
     flex: 1;
+  }
+}
+
+.buttonsection {
+  display: flex;
+  justify-content: end;
+  border-radius: 5px;
+  button {
+    background: #1e293b;
+    font-size: 15px;
+    padding: 10px 15px;
   }
 }
