--- a/styles/commerce/order.module.scss
+++ b/styles/commerce/order.module.scss
@@ -257,6 +257,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 10px;
   .actionbtnlist {
     ul {
       display: flex;
