--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,13 +26,14 @@ a {
   box-sizing: border-box;
 }
 
+* {
+  font-family: "Inter", sans-serif;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  // font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  //   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-family: "Poppins";
 }
 
 p,
@@ -45,6 +46,7 @@ h6,
 a {
   margin: 0;
   padding: 0;
+  font-family: "Inter", sans-serif;
 }
 
 a {
@@ -60,6 +62,8 @@ input {
 button {
   font-family: "Inter", sans-serif;
   cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 img {
@@ -70,29 +74,29 @@ img {
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: "Inter", sans-serif;
-  src: url(/fonts/Poppins-Regular.ttf);
-  font-weight: 400;
-}
+// @font-face {
+//   font-family: "Inter", sans-serif;
+//   src: url(/fonts/Poppins-Regular.ttf);
+//   font-weight: 400;
+// }
 
-@font-face {
-  font-family: "Inter", sans-serif;
-  src: url(/fonts/Poppins-Medium.ttf);
-  font-weight: 500;
-}
+// @font-face {
+//   font-family: "Inter", sans-serif;
+//   src: url(/fonts/Poppins-Medium.ttf);
+//   font-weight: 500;
+// }
 
-@font-face {
-  font-family: "Inter", sans-serif;
-  src: url(/fonts/Poppins-SemiBold.ttf);
-  font-weight: 600;
-}
+// @font-face {
+//   font-family: "Inter", sans-serif;
+//   src: url(/fonts/Poppins-SemiBold.ttf);
+//   font-weight: 600;
+// }
 
-@font-face {
-  font-family: "Inter", sans-serif;
-  src: url(/fonts/Poppins-Bold.ttf);
-  font-weight: 700;
-}
+// @font-face {
+//   font-family: "Inter", sans-serif;
+//   src: url(/fonts/Poppins-Bold.ttf);
+//   font-weight: 700;
+// }
 
 .bg-black {
   background-color: #000;
@@ -550,12 +554,6 @@ img.NewProductPage_bannerimage___OEjc {
   object-position: -63px;
 }
 
-
-
-
-
-
-
 @media (max-width: $mobile) {
   .faqsection ul li.heading h4 {
     color: #000;
@@ -567,32 +565,15 @@ img.NewProductPage_bannerimage___OEjc {
   }
   .faqsection {
     border-top: 1px solid #eee;
-     margin-top: 0px; 
-    padding-top: 0px; 
+    margin-top: 0px;
+    padding-top: 0px;
     padding-bottom: 16px;
+  }
+  .faqsection ul {
+    border-top: 1px solid #d1cbcb;
+    padding-bottom: 0px !important;
+    padding-top: 16px !important;
+
+    margin-bottom: 0px;
+  }
 }
-.faqsection ul {
-  border-top: 1px solid #d1cbcb;
-  padding-bottom: 0px !important;
-  padding-top: 16px !important;
- 
-  margin-bottom: 0px;
-}
-
-
-
-
-
-
-}
-
-
-
-
-
-
-
-
-
-
-
