--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -4,7 +4,9 @@
   background-repeat: no-repeat;
 }
 .slider_height {
-  height: 60vh !important;
+  min-height: 500px;
+  max-height: 800px;
+  height: 60vh;
 }
 .banner_bottom_style {
   background: #0000000d;
@@ -111,7 +113,7 @@ hr.banner_icons {
 }
 .bannerButton button {
   color: #ffffff;
-  background-color: #f22222;
+  background-color: #e63946;
   padding: 9px;
   border-radius: 42px;
   padding-left: 40px;
@@ -153,11 +155,29 @@ hr.banner_icons {
 .mattress_bannerone {
   padding: 0;
 }
+
+// CONTAINER STYLE
+.center {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .bannerheadingmiddle {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   h1 {
     color: #203445;
     padding: 100px 0px 0px;
     font-size: 85px;
+  }
+
+  p {
+    font-size: 28px;
+    color: rgb(255, 255, 255);
+    line-height: 1.1;
+    opacity: 0.8;
   }
 }
 
@@ -328,22 +348,29 @@ hr.banner_icons {
     padding-top: 8px;
   }
 }
+
+// PRODUCT CATEGORY
 section.qualityproducts {
   background-color: whitesmoke;
 }
-.box2 {
-  width: 280px;
+.itemCard {
   box-shadow: 2px 2px 10px 1px rgb(128 128 128 / 30%);
   background-color: #fff;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
   img {
     width: 100%;
-    height: 190px;
+    max-height: 200px;
+    min-height: 190px;
+    object-fit: cover;
   }
   h3 {
     text-align: center;
-    font-size: 28px;
+    font-size: 1.7rem;
     font-weight: 700;
+    color: #212121;
   }
   p {
     font-size: 16px;
@@ -352,21 +379,22 @@ section.qualityproducts {
     padding-left: 15px;
     padding-right: 9px;
     padding-bottom: 35px;
+    color: #474647;
+    font-size: 0.9rem;
+    text-align: center;
   }
   button {
-    margin: 0 auto;
-    display: block;
-    border: none;
-    background-color: #000;
+    position: absolute;
+    background-color: #2196f3;
     color: #fff;
-    /* padding: 5px 30px 5px; */
     border-radius: 50px;
     font-size: 22px;
-    position: absolute;
-    top: 420px;
-    height: 45px;
-    width: 130px;
-    left: 77px;
+    width: 120px;
+    font-size: 1rem;
+    padding: 0.4rem;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 .qualityheading {
@@ -568,5 +596,58 @@ section.qualityproducts {
         position: relative;
       }
     }
+  }
+}
+
+// CATEGORY PRODUCTS STYLE
+
+.category {
+  padding: 2rem;
+  display: grid;
+  // background: red;
+  .row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.6rem;
+  }
+}
+.category .item {
+  display: flex;
+  flex-direction: column;
+  background: #f4f4f4;
+  border-radius: 8px;
+  overflow: hidden;
+  border: 1px solid #00000026;
+  .image {
+    img {
+      min-height: 200px;
+      object-fit: cover;
+    }
+  }
+  .text {
+    padding: 0.4rem;
+    margin: 0;
+
+    h1 {
+      font-size: 1.5rem;
+    }
+    p {
+      color: #575757;
+      opacity: 1;
+      font-size: 0.9rem;
+    }
+  }
+}
+
+.category .controls {
+  display: flex;
+  align-items: center;
+  padding: 0.4rem;
+  button {
+    padding: 0.4rem 0.8rem;
+    border-radius: 20px;
+    color: #fff;
+    background: #2196f3;
+    font-size: 0.9rem;
   }
 }
