--- a/styles/commerce/order.module.scss
+++ b/styles/commerce/order.module.scss
@@ -527,7 +527,7 @@
 
 .buttonsection {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   border-radius: 5px;
   button {
     background: #1e293b;
