--- a/styles/admin.module.scss
+++ b/styles/admin.module.scss
@@ -130,14 +130,11 @@
   grid-template-columns: 1fr 1fr;
   @include common-input();
 }
-.button{
-  
+.button {
   @include common-input();
-  button{
+  button {
     min-width: 150px;
-
   }
-
 }
 
 .grid3 {
@@ -209,5 +206,17 @@
     font-size: 0.8rem;
     background-color: #666;
     border-radius: 6px;
+  }
+}
+
+.fileupload {
+  display: flex;
+  align-items: center;
+  img {
+    border-radius: 5px;
+    height: 50px;
+    width: 100%;
+    max-width: 150px;
+    object-fit: cover;
   }
 }
