--- a/styles/commerce/order.module.scss
+++ b/styles/commerce/order.module.scss
@@ -506,7 +506,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
-    align-content: start;
+    align-content: flex-start;
     li {
       width: 100%;
       background-color: #f1f5f9;
