--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,10 @@ $mobile: 576px;
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap");
 
+:root {
+  --primary-color: #212121;
+}
+
 html,
 body {
   margin: 0;
