--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -158,15 +158,16 @@
     h3 {
       color: rgb(14, 63, 112);
       font-weight: 600;
+      padding: "0 30px";
     }
     button {
       border: 1px solid #000;
       padding: 8px 30px;
       text-transform: uppercase;
-      background: #000;
+      // background: #000;
       color: #fff;
       font-weight: 600;
-      font-size: 20px;
+      font-size: 1rem;
       text-decoration: none;
       background: #041f5d;
     }
@@ -178,47 +179,52 @@
       flex-wrap: wrap;
       li {
         width: 100%;
-        label {
-          display: block;
-          margin-bottom: 15px;
-        }
+        // label {
+        //   display: block;
+        //   margin-bottom: 15px;
+        // }
       }
-      input {
-        display: inline-block;
-        line-height: 50px;
-        height: 50px;
-        font-size: 15px;
-        width: 100%;
-        background: 0 0;
-        border-radius: 0;
-        -webkit-border-radius: 0;
-        text-align: left;
-        box-shadow: none;
-        -webkit-box-shadow: none;
-        padding-left: 20px;
-        padding-right: 10px;
-        outline: 0;
-        border: 2px solid #bfbfbf;
-        margin-bottom: 15px;
-      }
+      input,
+      select,
       textarea {
-        display: inline-block;
-        line-height: 50px;
-
-        font-size: 15px;
-        width: 100%;
-        background: 0 0;
-        border-radius: 0;
-        -webkit-border-radius: 0;
-        text-align: left;
-        box-shadow: none;
-        -webkit-box-shadow: none;
-        padding-left: 20px;
-        padding-right: 10px;
-        outline: 0;
-        border: 2px solid #bfbfbf;
-        margin-bottom: 15px;
+        background: #fff;
       }
+      // input {
+      //   display: inline-block;
+      //   line-height: 50px;
+      //   height: 50px;
+      //   font-size: 15px;
+      //   width: 100%;
+      //   background: 0 0;
+      //   border-radius: 0;
+      //   -webkit-border-radius: 0;
+      //   text-align: left;
+      //   box-shadow: none;
+      //   -webkit-box-shadow: none;
+      //   padding-left: 20px;
+      //   padding-right: 10px;
+      //   outline: 0;
+      //   border: 2px solid #bfbfbf;
+      //   margin-bottom: 15px;
+      // }
+      // textarea {
+      //   display: inline-block;
+      //   line-height: 50px;
+
+      //   font-size: 15px;
+      //   width: 100%;
+      //   background: 0 0;
+      //   border-radius: 0;
+      //   -webkit-border-radius: 0;
+      //   text-align: left;
+      //   box-shadow: none;
+      //   -webkit-box-shadow: none;
+      //   padding-left: 20px;
+      //   padding-right: 10px;
+      //   outline: 0;
+      //   border: 2px solid #bfbfbf;
+      //   margin-bottom: 15px;
+      // }
       .countryname {
         font-size: 20px;
         color: rgb(14, 63, 112);
