--- a/styles/new-product.module.scss
+++ b/styles/new-product.module.scss
@@ -113,9 +113,17 @@ $mobile: 576px;
   cursor: pointer;
   width: calc(100% / 3 - 10px);
   padding: 10px;
-  border-width: 1px !important;
+  border-radius: 6px;
+  transition: all 100ms ease-in;
   span {
     display: block;
+    span {
+      font-weight: 700;
+      color: #607d8b;
+      font-size: 1rem;
+      background: #f9f9f9;
+      border-radius: 4px;
+    }
   }
 }
 
@@ -144,8 +152,8 @@ $mobile: 576px;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: #000000;
-    border: 1px solid #555555;
+    background-color: #aaa;
+    border-radius: 4px;
   }
 }
 
