--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -310,6 +310,7 @@ hr.banner_icons {
     color: #000;
     padding-left: 10px;
     font-style: normal;
+    position: relative;
   }
   .price del {
     opacity: 0.51;
@@ -322,10 +323,23 @@ hr.banner_icons {
     padding-left: 4px;
   }
   .box1 {
-    padding-bottom: 70px;
-    width: 260px;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
+    padding-bottom: 10px;
+    /* width: 260px; */
+    background: #fff;
+    border-radius: 2px;
+    border: 1px solid #e3e2e2;
+    margin-bottom: 50px;
+    overflow: hidden;
+    .percentage {
+      position: absolute;
+      background: #f44336;
+      color: #fff;
+      font-size: 10px;
+      font-weight: 400;
+      padding: 4px 8px;
+      border-radius: 5px;
+      right: 15px;
+    }
     img {
       width: 255px;
     }
