--- a/styles/product/product.module.scss
+++ b/styles/product/product.module.scss
@@ -77,6 +77,7 @@ $mobile: 576px;
   padding-left: 20px;
   padding-right: 20px;
   border-bottom: 1px solid #dadada;
+  align-items: center;
 }
 
 .btn {
@@ -197,6 +198,18 @@ $mobile: 576px;
   justify-content: space-between;
   padding-right: 5px;
   padding-top: 8px;
+  h5 {
+    font-size: 13px;
+    color: #66d2dd;
+    margin-bottom: 0px;
+    font-weight: 700;
+  }
+  span {
+    color: #0e3f70;
+    font-size: 20px;
+    font-weight: 700;
+    padding-top: 5px;
+  }
 }
 
 .numbertextarea {
@@ -209,7 +222,7 @@ $mobile: 576px;
 
 .addcart {
   background: #f4ab5d;
-  line-height: 40px;
+  // line-height: 40px;
   padding: 7px 20px;
   color: #0e3f70;
   border-radius: 5px;
@@ -375,5 +388,11 @@ $mobile: 576px;
     background: #fff;
     z-index: 9;
     border-bottom: 1px solid #000;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    transform: translateY(-50%) scale(0.6);
   }
 }
